Move certain recipe conditions to their own class